tests/lean/parser_error_recovery.lean.expected.out
parser_error_recovery.lean:5:9: error: unknown identifier 'ag'
parser_error_recovery.lean:3:0: warning: declaration 'f1' uses sorry
9000
parser_error_recovery.lean:11:35: error: invalid structure instance, ':=' expected
parser_error_recovery.lean:11:18: error: invalid structure value { ... }, field 'snd' was not provided
parser_error_recovery.lean:11:18: error: invalid structure value { ... }, 'sn' is not a field of structure 'prod'
9000
parser_error_recovery.lean:18:20: error: invalid 'if-then-else' expression, 'else' expected
parser_error_recovery.lean:17:0: warning: declaration 'f3' uses sorry
9000
parser_error_recovery.lean:26:9: error: unknown identifier 'nat.suc'
parser_error_recovery.lean:26:17: error: don't know how to synthesize placeholder
context:
⊢ Type ?
[]
parser_error_recovery.lean:36:4: error: unknown identifier 'simmp'
parser_error_recovery.lean:36:10: error: invalid expression
parser_error_recovery.lean:36:11: error: invalid expression
parser_error_recovery.lean:36:12: error: invalid expression
parser_error_recovery.lean:36:13: error: invalid expression
parser_error_recovery.lean:37:9: error: unknown identifier 'a'
parser_error_recovery.lean:37:11: error: invalid expression
parser_error_recovery.lean:37:12: error: invalid expression
parser_error_recovery.lean:37:13: error: invalid expression, unexpected token
parser_error_recovery.lean:36:4: error: don't know how to synthesize placeholder
context:
x : ℕ
⊢ Type ?
parser_error_recovery.lean:36:10: error: don't know how to synthesize placeholder
context:
x : ℕ
⊢ Type ?
parser_error_recovery.lean:37:11: error: don't know how to synthesize placeholder
context:
x : ℕ
⊢ Type ?
parser_error_recovery.lean:37:12: error: don't know how to synthesize placeholder
context:
x : ℕ
⊢ Type ?
parser_error_recovery.lean:37:13: error: don't know how to synthesize placeholder
context:
x : ℕ
⊢ Type ?
